[package]
name = "lnb-discor-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
figment = { version = "0.10.8", features = ["env", "toml"] }
poise = "0.5.2"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
songbird = { version = "0.3.1", features = ["yt-dlp"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
url = "2.3.1"
uuid = { version = "1.3.0", features = ["serde"] }
serenity = { version = "0.11.5", features = [
    "model",
    "voice",
], default-features = false }
