[package]
name = "lnb-music"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
figment = { version = "0.10.8", features = ["env", "toml"] }
humantime = "2.1.0"
poise = "0.5.2"
serde = { version = "1.0.157", features = ["derive"] }
serenity = { version = "0.11.5", features = [
    "model",
    "voice",
], default-features = false }
songbird = { version = "0.3.1", features = ["yt-dlp", "builtin-queue"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.3.1"
